--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
   padding: 0;
   box-sizing: border-box;
  
+
   font-family: 'Courier New', Courier, monospace;
 
 
@@ -17,6 +18,7 @@
   
 }
 .container{
+  background-color: grey;
  
   height:100vh;
   width:100vw;
